<resources>
    <string name="app_name">Baking Time</string>
    <string name="recipe_ingredients_textview">Ingredient Textview</string>
    <string name="recipe_step_instructions_textView">Step Instructions Text</string>
    <string name="recipe_step_content_textView">recipe step content imageview</string>
    <string name="recipe_step_content_previous_button">Previous</string>
    <string name="recipe_step_content_next_button">Next</string>
    <string name="recipe_item_image">recipe item image</string>
    <string name="recipe_step_content_textView_text">No Video Available</string>
    <string name="ingredients_label_text">Ingredients</string>
    <string name="widget_recipe_name_text">No Recipe Selected</string>
    <string name="widget_recipe_name_text_content_description">Recipe Name</string>
    <string name="widget_recipe_ingredients_text">Please Select a Recipe in the Application</string>
    <string name="widget_recipe_ingredients_text_content_description">Recipe Ingredients</string>
    <string name="add_widget">Add widget</string>
</resources>