<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_instructions_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/recipe_step_instructions_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_step_instructions_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="normal"
        android:textSize="@dimen/recipe_step_instructions_textView_textSize"/>

    <android.support.constraint.Guideline
        android:id="@+id/horizontalThreeQuarters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <Button
        android:id="@+id/recipe_step_content_previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_step_content_previous_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalThreeQuarters" />

    <Button
        android:id="@+id/recipe_step_content_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe_step_content_next_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalThreeQuarters" />

</android.support.constraint.ConstraintLayout>