<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_recipe_step_content_constraint"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment android:name="com.udacity.bakingtime.ui.fragment.VideoPlayerFragment"
        android:id="@+id/recipe_step_content_video_player_fragment"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/recipe_step_instructions_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_step_instructions_textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/recipe_step_content_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_step_content_previous_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/recipe_step_content_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_step_content_next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>